--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         btnText.textContent = 'Submitting...';
         spinner.style.display = 'block';
         try {
-            if (CONFIG.GOOGLE_SCRIPT_URL !== 'https://script.google.com/macros/s/AKfycbzjUXdVkBPirIgKg3hqoCG7QpjZc8eyuRWb60CEv-9aoUA_kuZ4lUXctBYw0YPLDwfU4w/exec') {
+            if (CONFIG.GOOGLE_SCRIPT_URL !== 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE') {
                 await fetch(CONFIG.GOOGLE_SCRIPT_URL, {
                     method: 'POST',
                     mode: 'no-cors',
