--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>H&W Affiliate Hub</title>
+    <title>Affiliate Hub</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -201,7 +201,7 @@
 <div class="container">
     <header class="header">
         <div class="logo">
-            <div class="logo-icon">H&W</div>
+            <div class="logo-icon">AH</div>
             <span class="logo-text">Affiliate Hub</span>
         </div>
         <p class="header-subtitle">Welcome aboard! Register below and generate your unique affiliate links in seconds.</p>
@@ -238,7 +238,7 @@
                 <label class="checkbox-wrapper" for="agreeTerms">
                     <input type="checkbox" id="agreeTerms" name="agreeTerms" required>
                     <span class="checkbox-custom"></span>
-                    <span class="checkbox-label">I agree to the <a href="#terms" onclick="showTerms(event)">Affiliate Terms &amp; Conditions</a>. I understand that H&amp;W Publishing may contact me via Telegram regarding affiliate promotions, guidelines, and updates.</span>
+                    <span class="checkbox-label">I agree to the <a href="#terms" onclick="showTerms(event)">Affiliate Terms &amp; Conditions</a>. I understand that the affiliate management team may contact me via Telegram regarding affiliate promotions, guidelines, and updates.</span>
                 </label>
             </div>
             <button type="submit" class="btn btn-primary" id="submitBtn">
@@ -293,11 +293,11 @@
         <div class="card" style="max-width:560px;max-height:80vh;overflow-y:auto;margin:0;" onclick="event.stopPropagation()">
             <h2 class="card-title" style="margin-bottom:16px;">Affiliate Terms &amp; Conditions</h2>
             <div style="font-size:14px;color:var(--text-secondary);line-height:1.8;">
-                <p style="margin-bottom:12px;">By registering as an affiliate with H&amp;W Publishing, you agree to the following terms:</p>
-                <p style="margin-bottom:12px;"><strong style="color:var(--text-primary);">1. Communication.</strong> You consent to be contacted by H&amp;W Publishing via Telegram for affiliate-related communications, including promotional guidelines, campaign updates, and performance insights.</p>
+                <p style="margin-bottom:12px;">By registering as an affiliate, you agree to the following terms:</p>
+                <p style="margin-bottom:12px;"><strong style="color:var(--text-primary);">1. Communication.</strong> You consent to be contacted via Telegram for affiliate-related communications, including promotional guidelines, campaign updates, and performance insights.</p>
                 <p style="margin-bottom:12px;"><strong style="color:var(--text-primary);">2. Compliance.</strong> You agree to promote products ethically and in compliance with all applicable laws and platform-specific advertising policies (including ClickBank's terms of service).</p>
                 <p style="margin-bottom:12px;"><strong style="color:var(--text-primary);">3. Prohibited Practices.</strong> Spam, misleading claims, cookie stuffing, and brand bidding are strictly prohibited. Violation may result in termination of your affiliate status.</p>
-                <p style="margin-bottom:12px;"><strong style="color:var(--text-primary);">4. Commissions.</strong> Commissions are paid according to the offer terms displayed on ClickBank. H&amp;W Publishing is not responsible for payment processing, which is handled by ClickBank.</p>
+                <p style="margin-bottom:12px;"><strong style="color:var(--text-primary);">4. Commissions.</strong> Commissions are paid according to the offer terms displayed on ClickBank. The affiliate management team is not responsible for payment processing, which is handled by ClickBank.</p>
                 <p><strong style="color:var(--text-primary);">5. Data Usage.</strong> Your submitted information (name, Telegram handle, ClickBank ID) will be used solely for affiliate management purposes and will not be shared with third parties.</p>
             </div>
             <button class="btn btn-outline" style="margin-top:20px;" onclick="closeTerms(event)">Close</button>
@@ -305,7 +305,7 @@
     </div>
 
     <footer class="footer">
-        <p>&copy; 2026 H&amp;W Publishing. All rights reserved.</p>
+        <p>&copy; 2026 Affiliate Hub. All rights reserved.</p>
     </footer>
 </div>
 
